--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -52,9 +52,9 @@
         android:layout_width="100dp"
         android:layout_height="44dp"
         android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
         android:layout_marginTop="248dp"
         android:ems="10"
+        android:hint="Start Time"
         android:inputType="time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -64,11 +64,10 @@
         android:layout_width="100dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="248dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:ems="10"
+        android:hint="Stop Time"
         android:inputType="time"
         app:layout_constraintEnd_toStartOf="@+id/dateInput"
         app:layout_constraintStart_toEndOf="@+id/startTimeInput"
@@ -80,8 +79,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="248dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
         android:ems="10"
+        android:hint="Date"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
