--- a/app/src/main/res/layout/activity_remove.xml
+++ b/app/src/main/res/layout/activity_remove.xml
@@ -65,7 +65,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
-        android:text="TextView"
+        android:text="@string/leftover"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/removeButton" />
